# mingle

./: .gitignore  README.md  com.github.halfmexican.Mingle.json  io.github.halfmexican.Mingle.json  make-mingle-appimage.sh  meson.build  mingle.yml
.github/workflows/: flatpak.yml
data/: com.github.halfmexican.Mingle.desktop.in  com.github.halfmexican.Mingle.gschema.xml  com.github.halfmexican.Mingle.metainfo.xml.in  io.github.halfmexican.Mingle.desktop.in  io.github.halfmexican.Mingle.gschema.xml  io.github.halfmexican.Mingle.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: STYLEGUIDE.md  application.vala  combined_emoji.vala  emoji_data_manager.vala  emoji_label.vala  emoji_structs.vala  main.vala  meson.build  mingle.gresource.xml  prefs.vala  style.css  style_switcher.vala  utils.vala  window.ui  window.vala
src/gtk/: help-overlay.blp  prefs.blp  style-switcher.blp  window.blp
